# eeg-mi-decoders

./: .gitignore  .gitmodules  LICENSE  README.md  main.ipynb  main.py  pyproject.toml
data/: __init__.py  const.py  dataset.py  ds1.ipynb  ds2.ipynb  mat_utils.py  plots.py  preprocess.py  subject.py
ds1/: __init__.py  ablation.py  dataset.py  subject.py
ds4/: __init__.py  dataset.py  subject.py
ds8/: __init__.py  braindecode_fix.py  dataset.py  subject.py
evaluation/: __init__.py  ablation.py  ablation_settings.py  crossval.py  evaluator.py  metrics.py  result.py  split.py  utils.py
models/: __init__.py  base.py  baseline.py  classifier.py  crossval.py  ds1_ablation.py  ds1_baseline.py  evaluation.py  feature_extractor.py  metrics.py  model.py  preprocess.py
